feat: add dark mode

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Search from "../components/Search.astro";
 
 <Layout title="Welcome to Astro.">
   <main>
-    <h1>Welcome to <span class="text-gradient">Iconer</span></h1>
+    <h1>Welcome to <span class="text-gradient">Guilty</span></h1>
     <h2>The only Text-To-Svg generator</h2>
 
 		<Search />
@@ -23,7 +23,7 @@ import Search from "../components/Search.astro";
 
 <style>
   :root {
-    --astro-gradient: linear-gradient(0deg, #4f39fa, #da62c4);
+    --astro-gradient: linear-gradient(0deg, #847996, #da62c4);
   }
 
   h1 {
@@ -45,6 +45,7 @@ import Search from "../components/Search.astro";
     background-position-y: 100%;
     border-radius: 0.4rem;
     animation: pulse 4s ease-in-out infinite;
+    color: white;
   }
 
   @keyframes pulse {
@@ -60,7 +61,7 @@ import Search from "../components/Search.astro";
   .instructions {
     line-height: 1.6;
     margin: 1rem 0;
-    background: #4f39fa;
+    background: #847996;
     padding: 1rem;
     border-radius: 0.4rem;
     color: var(--color-bg);
