--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,7 +21,7 @@ const { href, title, body } = Astro.props as Props;
 </li>
 <style>
 	:root {
-		--link-gradient: linear-gradient(45deg, #4f39fa, #da62c4 30%, var(--color-border) 60%);
+		--link-gradient: linear-gradient(45deg, #847996, #da62c4 30%, var(--color-border) 60%);
 	}
 
 	.link-card {
@@ -32,7 +32,8 @@ const { href, title, body } = Astro.props as Props;
 		background-size: 400%;
 		border-radius: 0.5rem;
 		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+		/* transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1); */
+		background-position: 0;
 	}
 
 	.link-card > a {
@@ -42,7 +43,7 @@ const { href, title, body } = Astro.props as Props;
 		padding: 1em 1.3em;
 		border-radius: 0.35rem;
 		color: var(--text-color);
-		background-color: white;
+		background-color: #1F2027;
 		opacity: 0.8;
 	}
 
@@ -62,15 +63,17 @@ const { href, title, body } = Astro.props as Props;
 	}
 
 	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 {
-		color: #4f39fa;
+		background-image: linear-gradient(45deg, #847996, #f400c7 30%, var(--color-border) 60%);
 	}
 
 	.link-card:is(:hover, :focus-within) h2 span {
 		will-change: transform;
-		transform: translateX(2px);
+		transform: translateX(16px);
+		background-position 1;
+	}
+
+	.link-card:is(:hover, :focus-within) h2 span {
+		will-change: transform;
+		transform: translateX(16px);
 	}
 </style>
