--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -1,64 +1,79 @@
 ---
 export interface Props {}
-
-const mockSvg = [
-	'<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M7 22q-.825 0-1.412-.587Q5 20.825 5 20q0-.825.588-1.413Q6.175 18 7 18t1.412.587Q9 19.175 9 20q0 .825-.588 1.413Q7.825 22 7 22Zm10 0q-.825 0-1.412-.587Q15 20.825 15 20q0-.825.588-1.413Q16.175 18 17 18t1.413.587Q19 19.175 19 20q0 .825-.587 1.413Q17.825 22 17 22ZM6.15 6l2.4 5h7l2.75-5ZM5.2 4h14.75q.575 0 .875.512q.3.513.025 1.038l-3.55 6.4q-.275.5-.738.775Q16.1 13 15.55 13H8.1L7 15h12v2H7q-1.125 0-1.7-.988q-.575-.987-.05-1.962L6.6 11.6L3 4H1V2h3.25Zm3.35 7h7Z"/></svg>',
-	'<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M7.3 21q-.95 0-1.625-.688Q5 19.625 5 18.675V9.4L3.175 5H1V3h3.525l1.65 4H20.95q.575 0 .875.475q.3.475.025.975L19 14.025q1.275.2 2.138 1.175q.862.975.862 2.3q0 1.45-1.012 2.475Q19.975 21 18.525 21q-1.475 0-2.487-1.025q-1.013-1.025-1.013-2.475q0-.5.125-.925q.125-.425.35-.825l-3.275-.3l-3 4.5q-.325.5-.838.775Q7.875 21 7.3 21Zm.025-2.025q.05 0 .225-.125l2.425-3.6q-1.225-.125-1.925-.588Q7.35 14.2 7 13.7v5q0 .125.1.2q.1.075.225.075ZM18.5 19q.65 0 1.075-.438Q20 18.125 20 17.5q0-.65-.425-1.075Q19.15 16 18.5 16q-.625 0-1.062.425Q17 16.85 17 17.5q0 .625.438 1.062q.437.438 1.062.438Z"/></svg>',
-	'<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M7.825 21H5V9.4L3.175 5H1V3h3.525l1.65 4h16.4L19 14.025q1.275.2 2.138 1.175q.862.975.862 2.3q0 1.45-1.012 2.475Q19.975 21 18.525 21q-1.475 0-2.487-1.025q-1.013-1.025-1.013-2.475q0-.5.125-.925q.125-.425.35-.825l-3.275-.3Zm9.025-7.125L19.325 9L7 9.025l1.725 4.1ZM7 13.7v5.275l2.975-3.725l-2.425-.225ZM18.5 19q.65 0 1.075-.438Q20 18.125 20 17.5q0-.65-.425-1.075Q19.15 16 18.5 16q-.625 0-1.062.425Q17 16.85 17 17.5q0 .625.438 1.062q.437.438 1.062.438Zm-1.65-5.125l-8.125-.75l8.125.75Z"/></svg>',
-	'<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M7.825 21H5V9.4L3.175 5H1V3h3.525l1.65 4h16.4L19 14.025q1.275.2 2.138 1.175q.862.975.862 2.3q0 1.45-1.012 2.475Q19.975 21 18.525 21q-1.475 0-2.487-1.025q-1.013-1.025-1.013-2.475q0-.5.125-.925q.125-.425.35-.825l-3.275-.3Zm9.025-7.125L19.325 9L7 9.025l1.725 4.1ZM7 13.7v5.275l2.975-3.725l-2.425-.225ZM18.5 19q.65 0 1.075-.438Q20 18.125 20 17.5q0-.65-.425-1.075Q19.15 16 18.5 16q-.625 0-1.062.425Q17 16.85 17 17.5q0 .625.438 1.062q.437.438 1.062.438Zm-1.65-5.125l-8.125-.75l8.125.75Z"/></svg>',
-];
-
-const foundSvg = []
-// Get icons on search clicked
-const handleClick = () => {
-	console.log('ok')
-	const foundSvg = mockSvg;
-};
-
 ---
-<form class="pt-8 flex items-center">
-	<label for="voice-search" class="sr-only">Search</label>
-	<div class="relative w-full">
-		<div
-			class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
-		>
-			<svg
-				aria-hidden="true"
-				class="w-5 h-5 text-gray-500 dark:text-gray-400"
-				fill="currentColor"
-				viewBox="0 0 20 20"
-				xmlns="http://www.w3.org/2000/svg"
-				><path
-					fill-rule="evenodd"
-					d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-					clip-rule="evenodd"></path>
-			</svg>
-		</div>
-		<input
-			type="text"
-			id="voice-search"
-			class="p-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-			placeholder="Shopping cart, Calendar, Home, Search..."
-			required
-		/>
-		<button
-			type="button"
-			class="absolute inset-y-0 right-0 flex items-center pr-3"
-		>
-		</button>
-	</div>
-	<button
-		type="submit"
-		class="inline-flex items-center py-4 px-3 ml-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-	>
-		Search
-	</button>
-</form>
 
-<div class="mt-8 grid grid-cols-4 gap-4">
-	
-	{foundSvg.map((svg) => <div class="w-full h-full" set:html={svg}></div>)}
+<div class="pt-8 flex items-center">
+  <label for="search" class="sr-only">Search</label>
+  <div class="relative w-full">
+    <div
+      class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+    >
+      <svg
+        aria-hidden="true"
+        class="w-5 h-5 text-gray-500 dark:text-gray-400"
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+        ><path
+          fill-rule="evenodd"
+          d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+          clip-rule="evenodd"></path>
+      </svg>
+    </div>
+    <input
+      type="text"
+      id="search"
+      class="p-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      placeholder="Shopping cart, Calendar, Home, Search..."
+      required
+    />
+    <button
+      type="button"
+      class="absolute inset-y-0 right-0 flex items-center pr-3"
+    >
+    </button>
+  </div>
+  <button
+    id="button"
+		type="button"
+    class="relative inline-flex items-center justify-center px-1 p-0.5 ml-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800"
+  >
+		<span
+			class="relative px-5 py-4 transition-all ease-in duration-75 bg-dark rounded-md group-hover:bg-opacity-0 text-white w-30"
+		>
+      Generate
+    </span>
+  </button>
 </div>
 
+<div id="results" class="mt-8 grid grid-cols-4 gap-4">
+</div>
+
+<script>
+  import { fetchIconFromPrompt } from "../services/generate";
+  const button = document.getElementById("button");
+	const input = document.getElementById("search") as HTMLInputElement;
+	const results = document.getElementById("results");
+	var generatedSvg = [];
+	
+	input.addEventListener("keypress", function(event) {
+		if (event.key === "Enter") {
+			event.preventDefault();
+			button.click();
+		}
+	});
+	
+  button.addEventListener("click", () => fetchAndDisplay(input.value));
+	
+	const fetchAndDisplay = (promt: string) => {
+		generatedSvg = fetchIconFromPrompt(input.value);
+		generatedSvg.map((svg) => results.innerHTML += '<div class="w-full h-full">' + svg + '</div>');
+	};
+
+</script>
+
 <style>
+  .bg-dark {
+    background-color: #1f2027;
+  }
 </style>
