--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Search from "../components/Search.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
+  <main class="font-mono">
     <h1>Welcome to <span class="text-gradient">Guilty</span></h1>
     <h2>The only Text-To-Svg generator</h2>
 
