fix: clean results after submit

--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -66,6 +66,7 @@ export interface Props {}
   button.addEventListener("click", () => fetchAndDisplay(input.value));
 	
 	const fetchAndDisplay = (promt: string) => {
+		results.innerHTML = '';
 		generatedSvg = fetchIconFromPrompt(input.value);
 		generatedSvg.map((svg) => results.innerHTML += '<div class="w-full h-full">' + svg + '</div>');
 	};
