--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -2,8 +2,8 @@
 export interface Props {}
 ---
 
-<div class="pt-8 flex items-center">
-  <label for="search" class="sr-only">Search</label>
+<div class="pt-8 flex items-center min-w-756px group">
+  <label for="search" class="absolute top-0 left-0">Generate unique SVG using AI</label>
   <div class="relative w-full">
     <div
       class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
@@ -23,7 +23,7 @@ export interface Props {}
     <input
       type="text"
       id="search"
-      class="p-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      class="p-4 pl-10 w-full bg-#0D0C0F hover:bg-#0D0C0F/60 border-0 ring-4 ring-#0D0C0F/10 transition-all duration-600 outline-none focus:ring-4 text-white/80 text-sm rounded-lg focus:aspect-none focus:border-#0D0C0F/40 focus:ring-0 focus:shadow-lg focus:shadow-#847996/80 transition transition-all duration-600"
       placeholder="Shopping cart, Calendar, Home, Search..."
       required
     />
@@ -36,11 +36,11 @@ export interface Props {}
   <button
     id="button"
 		type="button"
-    class="relative inline-flex items-center justify-center px-1 p-0.5 ml-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800"
+    class="relative inline-flex text-white/70 items-center ring-4 ring-#0D0C0F/60 bg-#0D0C0F/20 hover:ring-white hover:bg-white/95 hover:shadow-xl hover:shadow-#847996 justify-center px-8 py-3 ml-2 overflow-hidden text-md font-bold hover:text-black rounded-4 transition-all duration-600"
   >
-		<span
+		<!-- <span
 			class="relative px-5 py-4 transition-all ease-in duration-75 bg-dark rounded-md group-hover:bg-opacity-0 text-white w-40"
-		>
+		> -->
       Generate
     </span>
   </button>
