fix:v remove astro demo link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import logo from "./public/guilty-logo.png";
 
     <ul role="list" class="link-card-grid mt-30">
       <Card
-        href="https://astro.build/chat/"
+        href="#"
         title="Try Figma Plugin"
         body="Easily add custom icons to your Figma designs ❤️"
       />
